--- a/spec/fixtures/articles.yml
+++ b/spec/fixtures/articles.yml
@@ -3,3 +3,4 @@ test:
   body: This is an article body
   title: This is an article title
   url: http://sample-url.com
+  tags: what now super duper
