- Create one-to-many relationship between Category and Article classes - Add category_id column to articles - Add category associations to show/list/update views

--- a/spec/fixtures/articles.yml
+++ b/spec/fixtures/articles.yml
@@ -3,4 +3,5 @@ test:
   body: This is an article body
   title: This is an article title
   url: http://sample-url.com
+  category: tech
   tags: what now super duper
