--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,4 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -19,8 +15,8 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
   pool: 5
   timeout: 5000
 
