--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,36 @@
+common: &common
+  adapter: postgresql
+  encoding: utf8
+  pool: 8
+  min_messages: WARNING
+  host: localhost
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: furioustypist_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: furioustypist_test
 
 production:
-  adapter: postgresql
-  encoding: utf8
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: furioustypist_prod
 
 cucumber:
   <<: *test
+
+# development:
+  # adapter: sqlite3
+  # database: db/development.sqlite3
+  # pool: 5
+  # timeout: 5000
+
+# test: &test
+  # adapter: sqlite3
+  # database: db/test.sqlite3
+  # pool: 5
+  # timeout: 5000
