--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
   - 1.9.3
 notifications:
   email: true
-bundler_args: --without development
 branches:
   only:
     - master
+before_script:
+  - psql -c 'create database furioustypist_test;' -U postgres
