--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ branches:
     - master
 before_script:
   - psql -c 'create database furioustypist_test;' -U postgres
+  - rake db:migrate
+  - rake db:test:prepare
+  - rake db:seed
