--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,13 @@ notifications:
 branches:
   only:
     - master
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start" 
 before_script:
+  - sudo ci/install_phantomjs
+  - "export PATH=phantomjs/bin:$PATH"
+  - phantomjs --version  
   - psql -c 'create database furioustypist_test;' -U postgres
   - rake db:migrate
   - rake db:test:prepare
