--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -1,5 +1,19 @@
-
-
-tech:
-  name: 'tech'
-  description: 'this is a tech-related post'
+---
+quod:
+  id: 1
+  name: quod
+  description: Quaerat sequi suscipit blanditiis.
+  created_at: 2013-04-28 13:52:32.799157000 Z
+  updated_at: 2013-04-28 13:52:32.799157000 Z
+ut:
+  id: 2
+  name: ut
+  description: Error nostrum velit et qui minima alias omnis.
+  created_at: 2013-04-28 13:52:32.910441000 Z
+  updated_at: 2013-04-28 13:52:32.910441000 Z
+fuga:
+  id: 3
+  name: fuga
+  description: Id porro est adipisci maxime.
+  created_at: 2013-04-28 13:52:32.926687000 Z
+  updated_at: 2013-04-28 13:52:32.926687000 Z
