Add author to articles [Finishes #48963101]

--- a/spec/fixtures/articles.yml
+++ b/spec/fixtures/articles.yml
@@ -1,53 +1,59 @@
 ---
 article:
-  id: 1
-  title: Facere sed porro quam dicta itaque.
-  body: ! "---\n- Accusamus itaque nostrum repellendus soluta recusandae. Officiis
-    reiciendis ea omnis.\n  Distinctio quo dolor aut eligendi molestiae quisquam eum.\n-
-    Sequi et hic porro quos magnam quis. Ducimus distinctio commodi aliquid itaque.\n
-    \ Nulla est facilis natus deserunt eveniet similique.\n- Quae esse eos. Sit velit
-    recusandae autem et saepe id. Est dolorum dignissimos.\n  Placeat iusto deleniti
-    doloribus vel repellat et. Omnis voluptatem pariatur officia\n  rerum ratione.\n-
-    Ut saepe accusamus et et hic. Dolores quia qui. Et sint libero rem quibusdam qui.\n-
-    Est ut eum mollitia labore. Quae nostrum voluptate ut. Dolorum neque mollitia
-    delectus\n  expedita. Non molestiae autem tempore non et. Consequatur est saepe
-    hic.\n"
-  category_id: 1
-  created_at: 2013-04-28 13:52:32.861825000 Z
-  updated_at: 2013-04-28 13:52:32.861825000 Z
+  id: 13
+  title: Natus ad nesciunt dolore accusamus.
+  body: ! "---\n- Tempora maiores consequatur eum aperiam ducimus cumque. Veniam et
+    sapiente. Cupiditate\n  sed molestias ratione excepturi animi quasi. Quisquam
+    et porro nostrum quas sunt\n  debitis. Fugit dolorem in qui qui.\n- Facere et
+    asperiores qui error amet eveniet debitis. Et omnis vitae cum. Esse quia\n  quos.
+    Et consequuntur libero. Doloremque maiores ut sint alias magni.\n- Aut quas laborum
+    reprehenderit eos reiciendis ipsa. Ut velit ea excepturi sed nostrum\n  voluptate
+    repudiandae. Possimus debitis voluptatem consequatur cumque. Quo incidunt\n  eum
+    alias quia sit possimus ipsum.\n- Enim saepe officia laboriosam consequatur eum
+    omnis tenetur. Ipsa nulla iusto nihil.\n  Et labore provident sunt impedit vitae
+    recusandae.\n- Ad distinctio veniam quasi ea ut. Expedita et deleniti qui placeat
+    sit. Quibusdam\n  corrupti temporibus exercitationem architecto iste. Autem sit
+    id.\n"
+  category_id: 38
+  created_at: 2013-05-07 00:59:15.260578000 Z
+  updated_at: 2013-05-07 00:59:15.260578000 Z
   published: false
+  author_id: 
 unpublished_article:
-  id: 2
-  title: Eveniet autem quod non nulla aut.
-  body: ! "---\n- Et quia aliquid hic. Fugit reprehenderit et voluptatibus repellendus
-    aut qui accusantium.\n  Maiores illum nobis amet.\n- Dolorem dolore omnis veniam
-    non. Odio occaecati quam temporibus nihil enim hic non.\n  Quia distinctio porro
-    incidunt. Minima corporis et sunt itaque rerum qui.\n- Explicabo corporis quia
-    consequatur voluptatem. Vel sit quia ex ut et incidunt.\n  Eos dolor nemo eos
-    consequatur temporibus. Eum sint amet corrupti eaque in dolorum.\n- Adipisci nisi
-    natus provident a aut enim quia. Unde dolores eos totam ut rerum illo\n  et. Sequi
-    velit inventore odio hic nostrum architecto rerum. Sapiente sunt nihil\n  est.
-    Incidunt maiores assumenda neque totam consequatur dolorem numquam.\n- Dolore
-    et facilis. Sit sequi mollitia quisquam et et. Rerum voluptas dolore. Accusantium\n
-    \ aut quia voluptate. Quas fugit quia.\n"
-  category_id: 2
-  created_at: 2013-04-28 13:52:32.918394000 Z
-  updated_at: 2013-04-28 13:52:32.918394000 Z
+  id: 14
+  title: Ad perferendis tempore ut illo ducimus.
+  body: ! "---\n- Qui dolorem illo nobis autem hic voluptas. Sequi ipsum quos et quisquam
+    quis voluptates.\n  Distinctio quos hic corporis voluptatibus saepe.\n- Eos odio
+    autem hic labore deserunt est. Qui quaerat nihil id ipsa soluta praesentium.\n
+    \ Voluptatem itaque corporis veniam.\n- Impedit vel consequatur sint deserunt.
+    Neque perspiciatis libero ut veritatis voluptas\n  consequuntur. Facilis labore
+    fugit neque aut dicta.\n- Non velit sunt quam. Ducimus aut odit occaecati. Dolore
+    velit aut eligendi quia\n  est odio. Rerum maxime provident minus nostrum dolorem.\n-
+    Possimus quidem maiores consequatur. Sapiente aut minus atque consequuntur illum\n
+    \ eos doloremque. Esse quibusdam in eius qui incidunt id velit. Nostrum dicta
+    aspernatur\n  quia ullam. Eveniet perspiciatis sit ea veniam in mollitia non.\n"
+  category_id: 39
+  created_at: 2013-05-07 00:59:15.430437000 Z
+  updated_at: 2013-05-07 00:59:15.430437000 Z
   published: false
+  author_id: 124
 published_article:
-  id: 3
-  title: Id officiis non eveniet at quas quia.
-  body: ! "---\n- Repudiandae quasi hic magnam adipisci consequatur fuga. Voluptatibus
-    cumque fuga\n  dicta qui molestias. Quia suscipit ut corporis recusandae. Voluptate
-    nihil facere.\n  Possimus tenetur repellat sunt delectus dignissimos illo.\n-
-    Earum sit occaecati molestiae. Sint voluptas et. In aut vel alias eveniet. Est
-    error\n  aliquid. Ut alias quae harum qui ducimus.\n- Laborum nulla rem consequatur
-    quo sint unde quas. Quod et omnis. Dolorem blanditiis\n  non culpa. Iste sed itaque
-    et impedit. Et magni nostrum.\n- Nihil nemo est et. Ducimus provident voluptatem
-    facilis architecto in et nostrum.\n  Nobis aliquam fuga laborum. In quis enim
-    fuga.\n- Dolorem sint quidem quo numquam. Ducimus ut porro laudantium sint recusandae
-    placeat.\n  Et ut ut. Sunt nostrum et quis consequatur iure.\n"
-  category_id: 3
-  created_at: 2013-04-28 13:52:32.935314000 Z
-  updated_at: 2013-04-28 13:52:32.935314000 Z
+  id: 15
+  title: Non officiis animi consequatur tempora quod omnis.
+  body: ! "---\n- Ut dolore aut. Nesciunt laborum tenetur optio officia ipsum exercitationem.
+    In consequatur\n  architecto adipisci laudantium. Minus quam omnis.\n- Ut aliquid
+    voluptatem expedita voluptatem consectetur libero. Consequatur cupiditate\n  quo.
+    Molestiae qui ut ut est sed veniam. Et quibusdam iste nemo modi aliquam voluptate\n
+    \ cumque. Cum aliquam voluptatibus temporibus dolore est mollitia.\n- Ratione
+    dolor modi mollitia reprehenderit quaerat possimus et. Voluptatem ipsa ipsam\n
+    \ corporis aut pariatur. Reprehenderit enim aut rerum porro eaque et architecto.
+    Aperiam\n  dolores voluptas nam sequi veniam dolore soluta. Distinctio quibusdam
+    nihil totam\n  tempore incidunt et.\n- Dolorem pariatur sunt ullam. Fugit amet
+    unde quia. Ea voluptatibus perspiciatis\n  est natus.\n- Vel alias ad dolores
+    dolor. Porro aut tempora nobis odit. Explicabo minima sed dolores\n  nihil temporibus
+    aut et.\n"
+  category_id: 40
+  created_at: 2013-05-07 00:59:15.542390000 Z
+  updated_at: 2013-05-07 00:59:15.542390000 Z
   published: true
+  author_id: 125
