--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -1,19 +1,19 @@
 ---
-quod:
-  id: 1
-  name: quod
-  description: Quaerat sequi suscipit blanditiis.
-  created_at: 2013-04-28 13:52:32.799157000 Z
-  updated_at: 2013-04-28 13:52:32.799157000 Z
-ut:
-  id: 2
-  name: ut
-  description: Error nostrum velit et qui minima alias omnis.
-  created_at: 2013-04-28 13:52:32.910441000 Z
-  updated_at: 2013-04-28 13:52:32.910441000 Z
-fuga:
-  id: 3
-  name: fuga
-  description: Id porro est adipisci maxime.
-  created_at: 2013-04-28 13:52:32.926687000 Z
-  updated_at: 2013-04-28 13:52:32.926687000 Z
+qui:
+  id: 38
+  name: qui
+  description: Fuga natus et nulla omnis dolores.
+  created_at: 2013-05-07 00:59:15.229405000 Z
+  updated_at: 2013-05-07 00:59:15.229405000 Z
+delectus:
+  id: 39
+  name: delectus
+  description: Impedit qui molestias sint id possimus tempore tempora.
+  created_at: 2013-05-07 00:59:15.327139000 Z
+  updated_at: 2013-05-07 00:59:15.327139000 Z
+est:
+  id: 40
+  name: est
+  description: Vel sed laborum nulla aspernatur nemo et.
+  created_at: 2013-05-07 00:59:15.441163000 Z
+  updated_at: 2013-05-07 00:59:15.441163000 Z
