--- a/spec/fixtures/roles_users.yml
+++ b/spec/fixtures/roles_users.yml
@@ -1,13 +1,25 @@
 ---
 roles_users_001:
-  role_id: '1'
-  user_id: '1'
+  role_id: '8'
+  user_id: '121'
 roles_users_002:
-  role_id: '1'
-  user_id: '2'
+  role_id: '8'
+  user_id: '122'
 roles_users_003:
-  role_id: '1'
-  user_id: '3'
+  role_id: '8'
+  user_id: '123'
 roles_users_004:
-  role_id: '2'
-  user_id: '3'
+  role_id: '9'
+  user_id: '123'
+roles_users_005:
+  role_id: '8'
+  user_id: '124'
+roles_users_006:
+  role_id: '9'
+  user_id: '124'
+roles_users_007:
+  role_id: '8'
+  user_id: '125'
+roles_users_008:
+  role_id: '9'
+  user_id: '125'
