--- a/spec/fixtures/tags.yml
+++ b/spec/fixtures/tags.yml
@@ -1,46 +1,46 @@
 ---
-laudantium:
-  id: 1
-  name: laudantium
-  created_at: 2013-04-28 13:52:32.850053000 Z
-  updated_at: 2013-04-28 13:52:32.850053000 Z
-magnam:
-  id: 2
-  name: magnam
-  created_at: 2013-04-28 13:52:32.855291000 Z
-  updated_at: 2013-04-28 13:52:32.855291000 Z
-aspernatur:
-  id: 3
-  name: aspernatur
-  created_at: 2013-04-28 13:52:32.857638000 Z
-  updated_at: 2013-04-28 13:52:32.857638000 Z
-sequi:
-  id: 4
-  name: sequi
-  created_at: 2013-04-28 13:52:32.912974000 Z
-  updated_at: 2013-04-28 13:52:32.912974000 Z
-aut:
-  id: 5
-  name: aut
-  created_at: 2013-04-28 13:52:32.914812000 Z
-  updated_at: 2013-04-28 13:52:32.914812000 Z
 reiciendis:
-  id: 6
+  id: 85
   name: reiciendis
-  created_at: 2013-04-28 13:52:32.916564000 Z
-  updated_at: 2013-04-28 13:52:32.916564000 Z
-reiciendis_1:
-  id: 7
-  name: reiciendis
-  created_at: 2013-04-28 13:52:32.929225000 Z
-  updated_at: 2013-04-28 13:52:32.929225000 Z
-dolorem:
-  id: 8
-  name: dolorem
-  created_at: 2013-04-28 13:52:32.931391000 Z
-  updated_at: 2013-04-28 13:52:32.931391000 Z
-quisquam:
-  id: 9
-  name: quisquam
-  created_at: 2013-04-28 13:52:32.933380000 Z
-  updated_at: 2013-04-28 13:52:32.933380000 Z
+  created_at: 2013-05-07 00:59:15.251237000 Z
+  updated_at: 2013-05-07 00:59:15.251237000 Z
+ab:
+  id: 86
+  name: ab
+  created_at: 2013-05-07 00:59:15.254333000 Z
+  updated_at: 2013-05-07 00:59:15.254333000 Z
+repellendus:
+  id: 87
+  name: repellendus
+  created_at: 2013-05-07 00:59:15.256414000 Z
+  updated_at: 2013-05-07 00:59:15.256414000 Z
+atque:
+  id: 88
+  name: atque
+  created_at: 2013-05-07 00:59:15.329613000 Z
+  updated_at: 2013-05-07 00:59:15.329613000 Z
+quas:
+  id: 89
+  name: quas
+  created_at: 2013-05-07 00:59:15.331575000 Z
+  updated_at: 2013-05-07 00:59:15.331575000 Z
+optio:
+  id: 90
+  name: optio
+  created_at: 2013-05-07 00:59:15.333206000 Z
+  updated_at: 2013-05-07 00:59:15.333206000 Z
+est:
+  id: 91
+  name: est
+  created_at: 2013-05-07 00:59:15.443618000 Z
+  updated_at: 2013-05-07 00:59:15.443618000 Z
+quia:
+  id: 92
+  name: quia
+  created_at: 2013-05-07 00:59:15.445590000 Z
+  updated_at: 2013-05-07 00:59:15.445590000 Z
+dignissimos:
+  id: 93
+  name: dignissimos
+  created_at: 2013-05-07 00:59:15.447260000 Z
+  updated_at: 2013-05-07 00:59:15.447260000 Z
