Moved Faker gem to test/dev environment because of cranky fixtures

--- a/spec/fixtures/articles.yml
+++ b/spec/fixtures/articles.yml
@@ -1,59 +1,56 @@
 ---
 article:
-  id: 13
-  title: Natus ad nesciunt dolore accusamus.
-  body: ! "---\n- Tempora maiores consequatur eum aperiam ducimus cumque. Veniam et
-    sapiente. Cupiditate\n  sed molestias ratione excepturi animi quasi. Quisquam
-    et porro nostrum quas sunt\n  debitis. Fugit dolorem in qui qui.\n- Facere et
-    asperiores qui error amet eveniet debitis. Et omnis vitae cum. Esse quia\n  quos.
-    Et consequuntur libero. Doloremque maiores ut sint alias magni.\n- Aut quas laborum
-    reprehenderit eos reiciendis ipsa. Ut velit ea excepturi sed nostrum\n  voluptate
-    repudiandae. Possimus debitis voluptatem consequatur cumque. Quo incidunt\n  eum
-    alias quia sit possimus ipsum.\n- Enim saepe officia laboriosam consequatur eum
-    omnis tenetur. Ipsa nulla iusto nihil.\n  Et labore provident sunt impedit vitae
-    recusandae.\n- Ad distinctio veniam quasi ea ut. Expedita et deleniti qui placeat
-    sit. Quibusdam\n  corrupti temporibus exercitationem architecto iste. Autem sit
-    id.\n"
-  category_id: 38
-  created_at: 2013-05-07 00:59:15.260578000 Z
-  updated_at: 2013-05-07 00:59:15.260578000 Z
+  id: 1
+  title: Dolorem vero assumenda dolores.
+  body: ! "---\n- Alias nam nesciunt quibusdam impedit distinctio fuga. Reprehenderit
+    ut odit. Ut\n  enim nihil et excepturi consequatur ducimus est. Ab vel sapiente
+    soluta aliquam\n  aut.\n- Aut sint ex. Ab rerum recusandae tempora soluta quam
+    eaque. Libero consequatur temporibus\n  voluptatem dicta voluptate facere.\n-
+    Non natus nihil. Atque ipsam harum eligendi dolorem aut. Molestiae omnis pariatur\n
+    \ necessitatibus quam quaerat dolorum.\n- Quis veritatis et aliquid accusamus
+    quo. Quia fugiat eius. Ad nemo sapiente est\n  adipisci perspiciatis amet. Ullam
+    dolores quis laudantium in.\n- Consectetur placeat voluptas minima. Non ratione
+    ipsam exercitationem. Eum autem\n  expedita aut molestiae voluptatem quo hic.
+    Et necessitatibus fugiat facilis vel\n  maiores. Minima laboriosam eaque aspernatur
+    debitis qui.\n"
+  category_id: 1
+  created_at: 2013-05-07 01:26:56.841613000 Z
+  updated_at: 2013-05-07 01:26:56.841613000 Z
   published: false
   author_id: 
 unpublished_article:
-  id: 14
-  title: Ad perferendis tempore ut illo ducimus.
-  body: ! "---\n- Qui dolorem illo nobis autem hic voluptas. Sequi ipsum quos et quisquam
-    quis voluptates.\n  Distinctio quos hic corporis voluptatibus saepe.\n- Eos odio
-    autem hic labore deserunt est. Qui quaerat nihil id ipsa soluta praesentium.\n
-    \ Voluptatem itaque corporis veniam.\n- Impedit vel consequatur sint deserunt.
-    Neque perspiciatis libero ut veritatis voluptas\n  consequuntur. Facilis labore
-    fugit neque aut dicta.\n- Non velit sunt quam. Ducimus aut odit occaecati. Dolore
-    velit aut eligendi quia\n  est odio. Rerum maxime provident minus nostrum dolorem.\n-
-    Possimus quidem maiores consequatur. Sapiente aut minus atque consequuntur illum\n
-    \ eos doloremque. Esse quibusdam in eius qui incidunt id velit. Nostrum dicta
-    aspernatur\n  quia ullam. Eveniet perspiciatis sit ea veniam in mollitia non.\n"
-  category_id: 39
-  created_at: 2013-05-07 00:59:15.430437000 Z
-  updated_at: 2013-05-07 00:59:15.430437000 Z
+  id: 2
+  title: Ut sed voluptatibus ducimus provident.
+  body: ! "---\n- Inventore vitae deserunt hic expedita repellendus quasi accusantium.
+    Quae aut eum\n  tempore velit quia dolor. Quas quibusdam sequi quo.\n- Est rerum
+    voluptate excepturi id et. Aperiam incidunt hic voluptatum at consequatur\n  nihil
+    soluta. Est qui reprehenderit. Ex sit quia commodi.\n- Rem quia expedita dolores
+    velit. Magnam voluptatibus dolorem. Et aliquam praesentium\n  sit ex voluptatum
+    facilis quidem. Sed voluptate assumenda. Numquam assumenda consectetur\n  et quia
+    aliquam.\n- Consequatur aut quia ut. Quo quas dicta aspernatur voluptas sint qui.
+    Dolorum molestias\n  modi tempore in accusamus. Fugiat voluptas nam tenetur rerum
+    quam. Aut repellat\n  quisquam.\n- Dolorum ratione laudantium fuga. Ipsum praesentium
+    facilis ut est dolorem repudiandae.\n  Placeat voluptatem et exercitationem laudantium
+    soluta repellendus quia. Rerum eaque\n  fuga odio sed. Et temporibus iusto.\n"
+  category_id: 2
+  created_at: 2013-05-07 01:26:57.011460000 Z
+  updated_at: 2013-05-07 01:26:57.011460000 Z
   published: false
-  author_id: 124
+  author_id: 4
 published_article:
-  id: 15
-  title: Non officiis animi consequatur tempora quod omnis.
-  body: ! "---\n- Ut dolore aut. Nesciunt laborum tenetur optio officia ipsum exercitationem.
-    In consequatur\n  architecto adipisci laudantium. Minus quam omnis.\n- Ut aliquid
-    voluptatem expedita voluptatem consectetur libero. Consequatur cupiditate\n  quo.
-    Molestiae qui ut ut est sed veniam. Et quibusdam iste nemo modi aliquam voluptate\n
-    \ cumque. Cum aliquam voluptatibus temporibus dolore est mollitia.\n- Ratione
-    dolor modi mollitia reprehenderit quaerat possimus et. Voluptatem ipsa ipsam\n
-    \ corporis aut pariatur. Reprehenderit enim aut rerum porro eaque et architecto.
-    Aperiam\n  dolores voluptas nam sequi veniam dolore soluta. Distinctio quibusdam
-    nihil totam\n  tempore incidunt et.\n- Dolorem pariatur sunt ullam. Fugit amet
-    unde quia. Ea voluptatibus perspiciatis\n  est natus.\n- Vel alias ad dolores
-    dolor. Porro aut tempora nobis odit. Explicabo minima sed dolores\n  nihil temporibus
-    aut et.\n"
-  category_id: 40
-  created_at: 2013-05-07 00:59:15.542390000 Z
-  updated_at: 2013-05-07 00:59:15.542390000 Z
+  id: 3
+  title: Exercitationem est ea quidem voluptate.
+  body: ! "---\n- Quia animi unde dolore fugit nesciunt sit vero. Optio sit facere
+    ad non cum. Sit\n  quia natus ea itaque rerum.\n- Omnis at doloribus. Quaerat
+    maxime magnam veritatis cumque. Consequatur et ut perferendis.\n  Sit sequi ipsum
+    ea molestias consequatur veniam. Nam consectetur suscipit et adipisci\n  illum
+    ut.\n- Expedita iusto vero. Provident velit magni repellat eligendi aut quibusdam.
+    Qui\n  et deleniti. Eveniet libero dolor iusto tenetur vel.\n- Excepturi quod
+    rerum officia. Earum nobis aut. Ab debitis libero.\n- Est unde voluptatibus occaecati
+    facere. Voluptates consequatur occaecati debitis\n  et quod. Quas omnis inventore.
+    Non culpa accusamus atque.\n"
+  category_id: 3
+  created_at: 2013-05-07 01:26:57.122602000 Z
+  updated_at: 2013-05-07 01:26:57.122602000 Z
   published: true
-  author_id: 125
+  author_id: 5
