--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,16 +1,16 @@
 ---
 user:
-  id: 121
-  username: Eino
-  email: polly@carter.com
+  id: 1
+  username: Alta
+  email: yasmine@millerstroman.com
   is_email_validated: 
-  first_name: Bernhard
-  last_name: Runolfsdottir
+  first_name: Claudine
+  last_name: Jacobson
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 00:59:14.978668000 Z
-  updated_at: 2013-05-07 00:59:14.978668000 Z
-  encrypted_password: $2a$10$1kgSZ0dvsWNrLOly0gu4wOOoeuVfOK/zHeIVZ0VJ6jtcu.QCQQN.K
+  created_at: 2013-05-07 01:26:56.561379000 Z
+  updated_at: 2013-05-07 01:26:56.561379000 Z
+  encrypted_password: $2a$10$lpMgZticPEeJrBXxOtHVKe1YvU/4BD3x0TD8bHdscDzivOjCUTlVO
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -20,17 +20,17 @@ user:
   current_sign_in_ip: 
   last_sign_in_ip: 
 non_admin:
-  id: 122
-  username: Cruz
-  email: consuelo@ledner.info
+  id: 2
+  username: Humberto
+  email: stephon@baumbach.biz
   is_email_validated: 
-  first_name: Charles
-  last_name: Gutmann
+  first_name: Nolan
+  last_name: Hamill
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 00:59:15.074419000 Z
-  updated_at: 2013-05-07 00:59:15.074419000 Z
-  encrypted_password: $2a$10$1J8hNtkY5QXt56kc/pluneWksKHooU59cK0esSedYTjOdGnA0UcpS
+  created_at: 2013-05-07 01:26:56.656476000 Z
+  updated_at: 2013-05-07 01:26:56.656476000 Z
+  encrypted_password: $2a$10$9h3BFUIDX728uW/CJYVto.LKsQcsqMx2w1FraLrbwhLwcxs8sEUNy
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -40,17 +40,17 @@ non_admin:
   current_sign_in_ip: 
   last_sign_in_ip: 
 admin:
-  id: 123
-  username: Chasity
-  email: einar.beer@schadenheathcote.name
+  id: 3
+  username: Tyree
+  email: rosetta@ortizgoldner.info
   is_email_validated: 
-  first_name: Darrell
-  last_name: Collier
+  first_name: Kale
+  last_name: Green
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 00:59:15.170400000 Z
-  updated_at: 2013-05-07 00:59:15.170400000 Z
-  encrypted_password: $2a$10$8j8zyZmC.63i22DrtA028OaUhfMSJxCOuNmzWGozmvg5QUdIaUSfS
+  created_at: 2013-05-07 01:26:56.752007000 Z
+  updated_at: 2013-05-07 01:26:56.752007000 Z
+  encrypted_password: $2a$10$nPxgkPFUqD0GxaIdb7GoUOv1MQzJp4mJxdFZ3qHIQabC.M5RQgiMi
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -59,18 +59,18 @@ admin:
   last_sign_in_at: 
   current_sign_in_ip: 
   last_sign_in_ip: 
-maxie:
-  id: 124
-  username: Maxie
-  email: tyree@funk.name
+kay:
+  id: 4
+  username: Kay
+  email: nova@kohlerrodriguez.net
   is_email_validated: 
-  first_name: Ulises
-  last_name: Abbott
+  first_name: Laney
+  last_name: Hane
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 00:59:15.423861000 Z
-  updated_at: 2013-05-07 00:59:15.423861000 Z
-  encrypted_password: $2a$10$XFCSRIpgsDh.tuK5qXTdYu/ZqWe799aysjAsLi6t9SVlZoav.JDp6
+  created_at: 2013-05-07 01:26:57.005366000 Z
+  updated_at: 2013-05-07 01:26:57.005366000 Z
+  encrypted_password: $2a$10$Tp181AXhsL/WYPsX8GgLE.dC0yxJQlViCUdMQtbpLtfvp5HuZt4.y
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
@@ -79,18 +79,18 @@ maxie:
   last_sign_in_at: 
   current_sign_in_ip: 
   last_sign_in_ip: 
-gayle:
-  id: 125
-  username: Gayle
-  email: dameon@hamillreichert.net
+savanah:
+  id: 5
+  username: Savanah
+  email: jakob_jenkins@hahnbins.net
   is_email_validated: 
-  first_name: Camille
-  last_name: Schowalter
+  first_name: Devin
+  last_name: Hickle
   is_enabled: 
   is_deleted: 
-  created_at: 2013-05-07 00:59:15.537448000 Z
-  updated_at: 2013-05-07 00:59:15.537448000 Z
-  encrypted_password: $2a$10$JPwQkLjHgCxSyUlvxtcxE.iRbYQgYzhWUiZsh0DRRqJX7zN/o.hd2
+  created_at: 2013-05-07 01:26:57.118121000 Z
+  updated_at: 2013-05-07 01:26:57.118121000 Z
+  encrypted_password: $2a$10$vqekR4xc3GQPON3Twpz7ce1FGDWX2fpKQajcT5Wy6AmpQjBSUFeve
   reset_password_token: 
   reset_password_sent_at: 
   remember_created_at: 
