--- a/spec/fixtures/categories.yml
+++ b/spec/fixtures/categories.yml
@@ -1,19 +1,19 @@
 ---
-qui:
-  id: 38
-  name: qui
-  description: Fuga natus et nulla omnis dolores.
-  created_at: 2013-05-07 00:59:15.229405000 Z
-  updated_at: 2013-05-07 00:59:15.229405000 Z
-delectus:
-  id: 39
-  name: delectus
-  description: Impedit qui molestias sint id possimus tempore tempora.
-  created_at: 2013-05-07 00:59:15.327139000 Z
-  updated_at: 2013-05-07 00:59:15.327139000 Z
-est:
-  id: 40
-  name: est
-  description: Vel sed laborum nulla aspernatur nemo et.
-  created_at: 2013-05-07 00:59:15.441163000 Z
-  updated_at: 2013-05-07 00:59:15.441163000 Z
+pariatur:
+  id: 1
+  name: pariatur
+  description: Qui praesentium sapiente et.
+  created_at: 2013-05-07 01:26:56.810211000 Z
+  updated_at: 2013-05-07 01:26:56.810211000 Z
+ut:
+  id: 2
+  name: ut
+  description: Quaerat id ea ut blanditiis.
+  created_at: 2013-05-07 01:26:56.903678000 Z
+  updated_at: 2013-05-07 01:26:56.903678000 Z
+repellat:
+  id: 3
+  name: repellat
+  description: Enim tempora sunt minus delectus eaque veniam.
+  created_at: 2013-05-07 01:26:57.021739000 Z
+  updated_at: 2013-05-07 01:26:57.021739000 Z
