--- a/spec/fixtures/tags.yml
+++ b/spec/fixtures/tags.yml
@@ -1,46 +1,46 @@
 ---
-reiciendis:
-  id: 85
-  name: reiciendis
-  created_at: 2013-05-07 00:59:15.251237000 Z
-  updated_at: 2013-05-07 00:59:15.251237000 Z
-ab:
-  id: 86
-  name: ab
-  created_at: 2013-05-07 00:59:15.254333000 Z
-  updated_at: 2013-05-07 00:59:15.254333000 Z
-repellendus:
-  id: 87
-  name: repellendus
-  created_at: 2013-05-07 00:59:15.256414000 Z
-  updated_at: 2013-05-07 00:59:15.256414000 Z
-atque:
-  id: 88
-  name: atque
-  created_at: 2013-05-07 00:59:15.329613000 Z
-  updated_at: 2013-05-07 00:59:15.329613000 Z
-quas:
-  id: 89
-  name: quas
-  created_at: 2013-05-07 00:59:15.331575000 Z
-  updated_at: 2013-05-07 00:59:15.331575000 Z
-optio:
-  id: 90
-  name: optio
-  created_at: 2013-05-07 00:59:15.333206000 Z
-  updated_at: 2013-05-07 00:59:15.333206000 Z
-est:
-  id: 91
-  name: est
-  created_at: 2013-05-07 00:59:15.443618000 Z
-  updated_at: 2013-05-07 00:59:15.443618000 Z
-quia:
-  id: 92
-  name: quia
-  created_at: 2013-05-07 00:59:15.445590000 Z
-  updated_at: 2013-05-07 00:59:15.445590000 Z
-dignissimos:
-  id: 93
-  name: dignissimos
-  created_at: 2013-05-07 00:59:15.447260000 Z
-  updated_at: 2013-05-07 00:59:15.447260000 Z
+omnis:
+  id: 1
+  name: omnis
+  created_at: 2013-05-07 01:26:56.832109000 Z
+  updated_at: 2013-05-07 01:26:56.832109000 Z
+exercitationem:
+  id: 2
+  name: exercitationem
+  created_at: 2013-05-07 01:26:56.835295000 Z
+  updated_at: 2013-05-07 01:26:56.835295000 Z
+temporibus:
+  id: 3
+  name: temporibus
+  created_at: 2013-05-07 01:26:56.837310000 Z
+  updated_at: 2013-05-07 01:26:56.837310000 Z
+libero:
+  id: 4
+  name: libero
+  created_at: 2013-05-07 01:26:56.906254000 Z
+  updated_at: 2013-05-07 01:26:56.906254000 Z
+unde:
+  id: 5
+  name: unde
+  created_at: 2013-05-07 01:26:56.908237000 Z
+  updated_at: 2013-05-07 01:26:56.908237000 Z
+voluptas:
+  id: 6
+  name: voluptas
+  created_at: 2013-05-07 01:26:56.910027000 Z
+  updated_at: 2013-05-07 01:26:56.910027000 Z
+aut:
+  id: 7
+  name: aut
+  created_at: 2013-05-07 01:26:57.024496000 Z
+  updated_at: 2013-05-07 01:26:57.024496000 Z
+beatae:
+  id: 8
+  name: beatae
+  created_at: 2013-05-07 01:26:57.026504000 Z
+  updated_at: 2013-05-07 01:26:57.026504000 Z
+mollitia:
+  id: 9
+  name: mollitia
+  created_at: 2013-05-07 01:26:57.028061000 Z
+  updated_at: 2013-05-07 01:26:57.028061000 Z
