--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -2,7 +2,9 @@
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
 rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "-r features/support/ -r features/step_definitions --format #{ENV['CUCUMBER_FORMAT'] || 'Fivemat'} --strict --tags ~@wip"
+parallel = "--format progress --format ParallelTests::Cucumber::FailuresLogger --out tmp/cucumber_failures.log"
 %>
 default: <%= std_opts %> features
 wip: --tags @wip:3 --wip features
 rerun: <%= rerun_opts %> --format Fivemat --out rerun.txt --strict --tags ~@wip
+parallel: <%= parallel %> -r features/support/ -r features/step_definitions features
