--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_script:
   - rake db:migrate
   - rake db:test:prepare
   - rake db:seed
-  - rake sunspot:reset_without_reindex
+services:
+  - elasticsearch
